--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -217,6 +217,7 @@ jobs:
           sed -i '/^depends/s/)/ '\''qt6-5compat'\'')/' PKGBUILD
           sed -i 's/ldview(/ldview-qt6(/' PKGBUILD
           sudo -u nobody makepkg -ef
+          rm -f ldview*debug*pkg.tar.*
       - name: Upload packages
         if: needs.prepare.outputs.tag != ''
         env:
@@ -291,6 +292,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
 #      - name: Publish
 #        env:
 #          GH_TOKEN: ${{ github.token }}
@@ -304,5 +307,7 @@ jobs:
           gh release list |cut -f3|grep -v "${{ needs.prepare.outputs.tag }}"| grep -E 'v[0-9]{4}-[0-9]{2}-[0-9]{2}\.[0-9]{6}'|sort -nr|tail -n+2|\
           (while read tag ; do 
             echo Remove release for tag: $tag
-            gh release delete $(git tag | grep -q $tag && echo --cleanup-tag) -y $tag
+            gh release delete -y $tag
+            git tag -d $tag
+            git push --delete origin $tag
           done)
