build path update

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,16 +75,16 @@ jobs:
     - name: Build LDView
       shell: cmd
       run: |
-        msbuild LDView.vcxproj                                       /p:Platform=x64   /p:Configuration=Release /p:PlatformToolset=v143 /m
-        msbuild Launcher\Launcher.vcxproj         /p:SolutionDir=..\ /p:Platform=win32 /p:Configuration=Release /p:PlatformToolset=v143 /m
-        msbuild LDViewThumbs\LDViewThumbs.vcxproj /p:SolutionDir=..\ /p:Platform=win32 /p:Configuration=Release /p:PlatformToolset=v143 /m
-        msbuild LDViewThumbs\LDViewThumbs.vcxproj /p:SolutionDir=..\ /p:Platform=x64   /p:Configuration=Release /p:PlatformToolset=v143 /m
+        msbuild LDView.vcxproj                    /p:SolutionDir=%CD%\ /p:Platform=x64   /p:Configuration=Release /p:PlatformToolset=v143 /m
+        msbuild Launcher\Launcher.vcxproj         /p:SolutionDir=%CD%\ /p:Platform=win32 /p:Configuration=Release /p:PlatformToolset=v143 /m
+        msbuild LDViewThumbs\LDViewThumbs.vcxproj /p:SolutionDir=%CD%\ /p:Platform=win32 /p:Configuration=Release /p:PlatformToolset=v143 /m
+        msbuild LDViewThumbs\LDViewThumbs.vcxproj /p:SolutionDir=%CD%\ /p:Platform=x64   /p:Configuration=Release /p:PlatformToolset=v143 /m
         "c:\Program Files (x86)\Inno Setup 6\ISCC.exe" LDView64.iss
     - name: Build LDView32
       if: needs.prepare.outputs.tag != ''
       shell: cmd
       run: |
-        msbuild LDView.vcxproj /p:Configuration=Release /p:Platform=win32 /p:PlatformToolset=v143 /t:build /m
+        msbuild LDView.vcxproj /p:Configuration=Release /p:SolutionDir=%CD%\ /p:Platform=win32 /p:PlatformToolset=v143 /t:build /m
         "c:\Program Files (x86)\Inno Setup 6\ISCC.exe" LDView.iss
     - name: Upload Setup
       if: needs.prepare.outputs.tag != ''
