--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -27,16 +27,17 @@ build() {
   elif [ -x /usr/bin/qmake-qt5 ] ; then qmake-qt5 -spec $PLATFORM  ; fi
   if   [ -x /usr/bin/lrelease     ] ; then lrelease     LDView.pro ;
   elif [ -x /usr/bin/lrelease-qt5 ] ; then lrelease-qt5 LDView.pro ; fi
-  make clean all
+  make ${MAKEFLAGS} clean
+  make ${MAKEFLAGS} all
   cd kde5
   if [ -d build ]; then rm -rf build ; fi
   mkdir -p build
   cd build
   if cmake -DCMAKE_INSTALL_PREFIX=/usr .. ; then
-    make
+    make ${MAKEFLAGS}
   fi
   cd ../../../OSMesa
-  make all
+  make ${MAKEFLAGS} all
 }
  
 package_ldview() {
