--- a/QT/APKBUILD
+++ b/QT/APKBUILD
@@ -24,16 +24,16 @@ build() {
   elif [ -x /usr/bin/qmake-qt5 ] ; then qmake-qt5 -spec $PLATFORM  ; fi
   if   [ -x /usr/bin/lrelease     ] ; then lrelease     LDView.pro ;
   elif [ -x /usr/bin/lrelease-qt5 ] ; then lrelease-qt5 LDView.pro ; fi
-  make "TESTING=-I ../3rdParty/gl2ps -D_POSIX_C_SOURCE"
+  make "TESTING=-I ../3rdParty/gl2ps -D_POSIX_C_SOURCE" ${MAKEFLAGS}
   cd kde5
   if [ -d build ]; then rm -rf build ; fi
   mkdir -p build
   cd build
   if cmake -DCMAKE_INSTALL_PREFIX=`kf5-config --prefix` .. ; then
-    make
+    make ${MAKEFLAGS}
   fi
   cd ../../../OSMesa
-  make TESTING=-D_POSIX_C_SOURCE
+  make TESTING=-D_POSIX_C_SOURCE ${MAKEFLAGS}
 }
  
 package() {
