--- a/QT/desktop/ldview.desktop
+++ b/QT/desktop/ldview.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Name=LDView
 GenericName=LDraw model viewer
 Comment=LDraw Model Viewer
-Exec=LDView %f -platform xcb
+Exec=LDView %f
 Icon=gnome-ldraw
 Terminal=false
 Type=Application
