--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -156,7 +156,9 @@ jobs:
           cd QT
           mkdir -p ~/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS}
           echo '%_smp_mflags -j4' >> ~/.rpmmacros
-          ./makerpm
+          rpmbuild -bb LDView.spec
+          rpmbuild -bb -D 'qt5 1' LDView.spec
+          rpmbuild -bb -D 'qt6 1' LDView.spec
       - name: Upload packages
         if: needs.prepare.outputs.tag != ''
         env:
