--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -15,8 +15,6 @@ else
 CFLAGS += -O2
 endif
 
-SPEC := $(shell if [ `uname -m` = "x86_64" ] ; then echo linux-g++-64 ; elif [ `uname -m` = i386 -o `uname -m` = i486 -o `uname -m` = i586 -o `uname -m` = i686 ] ; then echo linux-g++-32 ; else echo linux-g++ ; fi )
-TESTING := $(shell if [ ! -f /usr/include/gl2ps.h ] ; then echo -I ../3rdParty/gl2ps -L ../3rdParty/gl2ps ; fi; if [ ! -f /usr/include/tinyxml.h ] ; then echo -I ../3rdParty/tinyxml ; fi) $(shell dpkg-buildflags --get CPPFLAGS)
 DEST=$(shell if [ -f /usr/src/packages/BUILD/QT/LDView.pro ] ; then echo /usr/src/packages/BUILD/debian/ldview ; else echo $(shell pwd)/debian/ldview ; fi )
 export Q_LDFLAGS="-Wl,-z,relro"
 LDFLAGS := $(shell dpkg-buildflags --get LDFLAGS)
@@ -30,44 +28,33 @@ build-stamp:
 	# Add here commands to compile the package.
 	if [ -f LDView.pro ] ; then cd .. ; fi ; \
 	cd OSMesa ;                              \
-	export TESTING="$(TESTING)";             \
-	make STATIC="$(LDFLAGS)" USE_CPP11=YES -j$(nproc) all
+	make STATIC="$(LDFLAGS)" USE_CPP11=YES -j$(shell nproc) all
 	if [ -f LDView.pro ] ; then cd .. ; fi ; \
 	cd QT ;                             	 \
-	if which lrelease-qt4 >/dev/null ; then  \
-		lrelease-qt4 LDView.pro;			 \
-	elif which lrelease-qt5 >/dev/null ; then \
+	if which lrelease-qt5 >/dev/null ; then \
 		lrelease-qt5 LDView.pro;			 \
 	elif which lrelease >/dev/null ; then \
 		lrelease LDView.pro ;		 \
 	fi;										 \
-	qmake6 -config release                    \
-		-spec $(SPEC)                        \
-		USE_CPP11=YES;			\
-	make -j$(nproc) all
+	qmake6 -config release USE_CPP11=YES; 	 \
+	make -j$(shell nproc) all
 	cp -f QT/LDView QT/LDView.qt6
 	export QT_SELECT=5
 	if [ -f LDView.pro ] ; then cd .. ; fi ; \
 	cd QT ;                             	 \
-	qmake -config release					 \
-		-spec $(SPEC)						 \
-		USE_CPP11=YES;						 \
-	make -j$(nproc) compiler_clean all
+	qmake -config release USE_CPP11=YES;	 \
+	make -j$(shell nproc) compiler_clean all
 	cp -f QT/LDView QT/LDView.qt5
 	if [ -f LDView.pro ] ; then cd .. ; fi ; \
 	cd QT ;									 \
 	if [ -x /usr/bin/kf5-config ] ; then     \
 		cd kde5; mkdir -p build ; cd build ; \
 		(QT_SELECT=5;cmake -DCMAKE_INSTALL_PREFIX=`kf5-config --prefix` .. ;\
-		make -j$(nproc) all);				 \
-	elif [ -x /usr/bin/kde4-config ] ; then  \
-		cd kde ; mkdir -p build ; cd build ; \
-		(QT_SELECT=4;cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` .. ;\
-		make -j$(nproc) all) ;				 \
+		make -j$(shell nproc) all);			 \
 	elif [ -f /usr/include/KF5/KIOWidgets/kio/thumbcreator.h ] ; then \
 		cd kde5; mkdir -p build ; cd build ; \
 		(QT_SELECT=5;cmake .. ;				 \
-		make -j$(nproc) all;)				 \
+		make -j$(shell nproc) all;)				 \
 	fi
 	# --- end custom part for compiling
 
