--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -18,13 +18,10 @@ md5sums=(SKIP)
 
 build() {
   test -d ${srcdir}/ldview-git/QT && cd ${srcdir}/ldview-git/QT || cd ..
-  if test "$CARCH" == x86_64; then
-    PLATFORM=linux-g++-64
-  else
-    PLATFORM=linux-g++-32
-  fi
-  if   [ -x /usr/bin/qmake     ] ; then qmake      -spec $PLATFORM ;
-  elif [ -x /usr/bin/qmake-qt5 ] ; then qmake-qt5 -spec $PLATFORM  ; fi
+  if   [ -x /usr/bin/lrelease     ] ; then lrelease     LDView.pro ;
+  elif [ -x /usr/bin/lrelease-qt5 ] ; then lrelease-qt5 LDView.pro ; fi
+  if   [ -x /usr/bin/qmake     ] ; then qmake     ;
+  elif [ -x /usr/bin/qmake-qt5 ] ; then qmake-qt5 ; fi
   make ${MAKEFLAGS} clean
   make ${MAKEFLAGS} all
   cd kde5
