--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -80,11 +80,12 @@ install: build
 	rm -f $(DEST)/usr/share/ldview/license.txt
 	rm -f $(DEST)-qt5/usr/share/ldview/license.txt
 	make -C OSMesa PREFIX=$(DEST)-osmesa install
-	cd QT                                                  ;\
     if [ -x /usr/bin/kf5-config ] ; then     				\
-        cd kde5/build ; make DESTDIR=$(DEST) install	   ;\
-    elif [ -x /usr/bin/kde4-config ] ; then  				\
-        cd kde/build ; make DESTDIR=$(DEST) install 	   ;\
+        make -C QT/kde5/build DESTDIR=$(DEST) install	   ;\
+        make -C QT/kde5/build DESTDIR=$(DEST)-qt5 install  ;\
+    elif [ -f /usr/include/KF5/KIOWidgets/kio/thumbcreator.h ] ; then \
+        make -C QT/kde5/build DESTDIR=$(DEST) install 	   ;\
+        make -C QT/kde5/build DESTDIR=$(DEST)-qt5 install   ;\
     fi
 
 	# --- end custom part for installing
